[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/floor/floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://gameplay/level/level.gd" type="Script" id=3]
[ext_resource path="res://gameplay/level_section/level_section.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 32 )

[node name="level" type="Node2D"]
script = ExtResource( 3 )

[node name="roof" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 328 )
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0 )

[node name="fixed_elements" type="Node2D" parent="."]
position = Vector2( 968, 1008 )

[node name="bed" type="Area2D" parent="fixed_elements"]
position = Vector2( -800, 0 )
collision_layer = 4

[node name="sprite" type="Sprite" parent="fixed_elements/bed"]
texture = ExtResource( 2 )

[node name="collision_shape" type="CollisionShape2D" parent="fixed_elements/bed"]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="player_spawn_position" type="Position2D" parent="fixed_elements"]
position = Vector2( 800, 0 )

[node name="level_sections" type="Node2D" parent="."]

[node name="0" parent="level_sections" instance=ExtResource( 4 )]
position = Vector2( 250, 332 )

[node name="1" parent="level_sections" instance=ExtResource( 4 )]
position = Vector2( 999, 332 )

[connection signal="body_entered" from="fixed_elements/bed" to="." method="_on_bed_body_entered"]
